# AV2-IC

./: Makefile  pyproject.toml
docs/: README.md
src/app/: __main__.py
src/notebooks/: Atividade2_2_AV2.ipynb
