[tool.poetry]
name = "AV2-IC"
version = "0.1.0"
description = ""
authors = ["Amanda Rigaud <amanda.lima@aln.senaicimatec.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
tensorflow = "^2.6.0"
scikit-learn = "^0.24.0"
keras = "^2.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "src.app"

[tool.poetry.extras]
dev = ["ipython", "jupyter"]

[tool.poetry.plugins."poetry-dynamic-versioning"]
version-file = "pyproject.toml"

